...
"okButton" = "OK";
"areYouSureAlertTitle" = "Are you sure?";
"confirmButton" = "Confirm";
"deleteButton" = "Delete";
"removeButton" = "Remove";
"cancelButton" = "Cancel";
"addExercise" = "Add Exercise";
"exerciseSettings" = "Exercise Settings";
"completeButton" = "Complete";
"incompleteButton" = "Incomplete";
"oops" = "Oops!";
"enableNotifications" = "Enable notifications";
"enableNotificationsError" = "Something went wrong. Please check you have notifications enabled.";
...
"historySubtitle" = "View your workout and exercise history to track your performance.";
"communitySubtitle" = "Share and download workouts with the Olio community.";



/* TABS */
"homeTab" = "Home";
"historyTab" = "History";
"exercisesTab" = "Exercises";
"communityTab" = "Community";



/* WORKOUTS */
"workoutTemplates" = "Templates";
"workoutsScheduled" = "Scheduled Workouts";
"selectOption" = "Select an option";
"newTemplate" = "New Template";
"newWorkout" = "New Workout";
"addNewTemplate" = "Add Template";
"addNewWorkout" = "Add Workout";
"noExercises" = "No Exercises";
"creator" = "Creator";
"uploadWorkout" = "Upload workout to iCloud?";
"uploadWorkoutMessage" = "Details of the workout, its exercises and sets, as well as your username, will be shared with the Olio community.";
...

/* EDITING WORKOUTS */
"editWorkoutNavigationTitle" = "Edit Workout";
"editTemplateNavigationTitle" = "Edit Template";
"workoutName" = "Workout Name";
"templateName" = "Template Name";
"completedSectionHeader" = "Completed";
"scheduledSectionHeader" = "Scheduled";
"workoutDate" = "Date";
"today" = "Today";
"tomorrow" = "Tomorrow";
"selectWorkoutDateLabel" = "Select a workout date";
"selectWorkoutDateMessage" = "Select a date to schedule this workout on.";
"workoutReminderTimeSectionHeader" = "Reminder";
"showReminders" = "Show reminders";
"reminderTime" = "Reminder time";
"addExercisesToWorkout" = "Add";
"scheduleWorkout" = "Schedule workout";
"completeWorkout" = "Workout complete";
"markWorkoutIncomplete" = "Workout incomplete";
"createTemplateFromWorkoutButton" = "Make workout template";
"createTemplateConfirmationTitle" = "Create a template?";
"createTemplateConfirmationMessage" = "We'll use the exercises and sets in this workout to create a new template. You can view your workout templates on the Home tab.";
...



/* EXERCISES */
"exerciseNavigationTitle" = "Exercises";
"deleteExerciseConfirmationMessage" = "Deleting an exercise cannot be undone and you will lose its history forever. This will also remove the exercise from all scheduled and completed workouts.";
"saveButton" = "Save";
"exerciseName" = "Exercise Name";
"exerciseCategory" = "Exercise Category";
"muscleGroup" = "Muscle Group";
"chest" = "Chest";
"back" = "Back";
"shoulders" = "Shoulders";
"biceps" = "Biceps";
"triceps" = "Triceps";
"legs" = "Legs";
"abs" = "Abs";
"fullBody" = "Full Body";
"weights" = "Free Weights";
"body" = "Bodyweight";
"weightsAndBody" = "Free Weights | Bodyweight";
"cardio" = "Cardio";
"exerciseClass" = "Class";
"stretch" = "Stretch";
"errorAlertTitle" = "Oops!";
"duplicationErrorAlertMessage" = "Looks like this exercise already exists. Try changing the name to proceed.";
"emptyNameErrorAlertMessage" = "Looks like this exercise doesn't have a name. Try providing one to proceed.";
"noExercisesYetTitle" = "No exercises in your library yet!";
"noExercisesYetMessage" = "Head to the Exercises tab to add some yourself, or load the Olio exercise library for a head start.";
"noExercisesYetTabMessage" = "Add your own exercises using the '+' button above, or load the Olio exercise library for a head start.";
"loadOlioExercises" = "Load exercise library";
"targetWeight" = "Target Weight: ";
"notApplicable" = "N/A";
"unknownExercise" = "Unknown Exercise";
"unknownCategory" = "Unknown Category";
"unknownMuscleGroup" = "Unknown Muscle Group";



/* EDIT EXERCISES */
"editExerciseNavigationTitle" = "Edit Exercise";
"exerciseHistory" = "Exercise History";
"workoutDateMissing" = "Workout date missing";
"workoutNameMissing" = "Workout name missing";
"saveChanges" = "Save Changes";



...
