...
            HStack {
                ExerciseSetCompletionIcon(exerciseSet: exerciseSet)

                // Only weighted exercises should have weight text field.
                if exerciseSet.exercise?.category == 1 {
                    HStack {
                        TextField("Weight",
                                  value: $exerciseSetWeight.onChange(update),
                                  format: .number)
                            .exerciseSetDecimalTextField()
                            .focused($inputActive)

                        Text("kg")
...
                    Spacer()
                }

                // Weighted and bodyweight exercises should have reps field.
                if exerciseSet.exercise?.category == 1 || exerciseSet.exercise?.category == 2 {
                    HStack {
                        TextField("Reps",
                                  value: $exerciseSetReps.onChange(update),
                                  format: .number)
                            .exerciseSetIntegerTextField()
                            .focused($inputActive)

                        Text("reps")
...
