...
        var setsString = ""

        switch workout.workoutExercises.count {
        case 0:
            exercisesString = "No exercises, "
        case 1:
            exercisesString = "1 exercise, "
        default:
            exercisesString = "\(workout.workoutExercises.count) exercises, "
        }

        switch workout.workoutExerciseSets.count {
        case 0:
            setsString = "no sets"
        case 1:
            setsString = "1 set"
        default:
            setsString = "\(workout.workoutExercises.count) set"
        }

        content.subtitle = exercisesString + setsString

...
