...
                            Image(systemName: "plus")
                                .padding(.bottom, 5)

                            Text(.addNewTemplate)
                        }
                    }
                    .accessibilityIdentifier("Add new template")
                    .padding(10)
                    .frame(maxHeight: .infinity)
                    .background(Color.secondarySystemGroupedBackground)
                    .cornerRadius(5)

                    ForEach(viewModel.templates) { template in
...
