//
//  OlioUITests.swift
//  OlioUITests
//
//  Created by Jake King on 04/12/2021.
//

import Foundation
import XCTest

extension XCUIElement {
    func forceTapElement() {
        if self.isHittable {
            self.tap()
        } else {
            let coordinate: XCUICoordinate = self.coordinate(withNormalizedOffset: CGVector(dx: 0.5, dy: 0.5))
            coordinate.tap()
        }
    }
}

// swiftlint:disable:next type_body_length
class OlioUITests: XCTestCase {
    var app: XCUIApplication!

    override func setUpWithError() throws {
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments = ["enable-testing"]
        app.launch()
    }

    /// Tests that the app has three tabs; Home, History and Exercises.
    func testAppHasThreeTabs() throws {
        XCTAssertEqual(
            app.tabBars.buttons.count,
            4,
            "There should be 4 tabs in the app."
        )
    }

    /// Tests when the app is first launched that on the Home tab there are no workouts or templates and the correct
    /// buttons exist.
    func testHomeTabSetUp() throws {
        let addWorkoutButton = app.tables.cells.buttons["Add new workout"]
        let addTemplateButton = app.scrollViews.buttons["Add new template"]

        XCTAssertEqual(
            app.scrollViews.buttons.count,
            1,
            "There should be 1 template card in the scroll view initially."
        )

        XCTAssertTrue(
            addTemplateButton.exists,
            "The 1 template card that exists should contain the 'New Template' button."
        )

        XCTAssertEqual(
            app.tables.cells.count,
            1,
            "There should be 1 cell in the table initially."
        )

        XCTAssertTrue(
            addWorkoutButton.exists,
            "The 1 cell that exists should contain the 'New Workout' button."
        )
    }

    /// Tests when the app is first launched that on the History tab there are no workouts.
    func testHistoryTabSetUp() throws {
        app.tabBars.buttons["History"].tap()

        XCTAssertEqual(
            app.tables.cells.count,
            0,
            "There should be 0 cell in the table initially."
        )
    }

    /// Tests when the app is first launched that on the Exercises tab there are no exercises, the exercise category
    /// segmented control is not showing and the correct buttons are exist.
    func testExercisesTabSetUp() throws {
        app.tabBars.buttons["Exercises"].tap()

        XCTAssertEqual(
            app.tables.cells.count,
            0,
            "There should be 0 exercises in the list initially."
        )

        XCTAssertTrue(
            app.navigationBars.buttons["Add new exercise"].exists,
            "There should be a button to add a new exercise in the navigation bar."
        )

        XCTAssertTrue(
            app.buttons["Load exercise library"].exists,
            "When there are 0 exercises, 'Load exercise library' button should be visible for all exercise categories."
        )

        XCTAssertEqual(
            app.segmentedControls.count,
            0,
            "When there are 0 exercises, the exercise category segmented control should not be visible."
        )
    }

    /// Tests the "New Workout" button on the Home tab correctly adds a single workout scheduled for today.
    func testHomeTabAddsSingleWorkout() throws {
        let addWorkoutButton = app.tables.cells.buttons["Add new workout"]
        let todayButton = app.sheets.scrollViews.otherElements.buttons["Today"]
        let todayDate = Calendar.current.startOfDay(for: .now).formatted(date: .complete,
                                                                     time: .omitted)

        try testHomeTabSetUp()

        addWorkoutButton.tap()
        todayButton.tap()

        XCTAssertEqual(
            app.tables.cells.count,
            2,
            "There should be 1 workout, plus 1 cell containing the 'New Workout' button."
        )

        XCTAssertTrue(
            app.tables.staticTexts[todayDate].exists,
            "The section header should be today's date."
        )
    }

    /// Tests the "New Workout" button on the Home tab correctly adds workouts scheduled on multiple days.
    func testHomeTabAddsMultipleWorkouts() throws {
        let addWorkoutButton = app.tables.cells.buttons["Add new workout"]
        let todayButton = app.sheets.scrollViews.otherElements.buttons["Today"]
        let tomorrowButton = app.sheets.scrollViews.otherElements.buttons["Tomorrow"]
        let today = Calendar.current.startOfDay(for: .now).formatted(date: .complete,
                                                                     time: .omitted)
        let tomorrow = Calendar.current.startOfDay(for: .now.addingTimeInterval(86400)).formatted(date: .complete,
                                                                                                  time: .omitted)

        try testHomeTabSetUp()

        for workoutCount in 1...5 {
            XCTAssertTrue(
                addWorkoutButton.waitForExistence(timeout: 1),
                "The 'New Workout' button should exist before attempting to tap it."
            )

            addWorkoutButton.tap()

            if workoutCount.isMultiple(of: 2) {
                tomorrowButton.tap()
            } else {
                todayButton.tap()
            }

            XCTAssertEqual(
                app.tables.cells.count,
                workoutCount + 1,
                "There should be \(workoutCount) workout(s), plus 1 cell containing the 'New Workout' button."
            )

            XCTAssertTrue(
                app.tables.staticTexts[today].exists,
                "The section header should be today's date."
            )

            if workoutCount > 1 {
                XCTAssertTrue(
                    app.tables.staticTexts[tomorrow].exists,
                    "The section header should be tomorrow's date."
                )
            }
        }
    }

    /// Tests the "New Template" button on the Home tab correctly adds a single template.
    func testHomeTabAddsSingleTemplate() throws {
        let addTemplateButton = app.scrollViews.buttons["Add new template"]

        try testHomeTabSetUp()

        addTemplateButton.tap()

        XCTAssertEqual(
            app.scrollViews.buttons.count,
            2,
            "There should be 1 template, plus 1 cell containing the 'New Template' button."
        )
    }

    /// Tests the "New Template" button on the Home tab correct adds templates.
    func testHomeTabAddsMultipleTemplates() throws {
        let addTemplateButton = app.scrollViews.buttons["Add new template"]

        try testHomeTabSetUp()

        for templateCount in 1...5 {
            addTemplateButton.tap()

            XCTAssertEqual(
                app.scrollViews.buttons.count,
                templateCount + 1,
                "There should be \(templateCount) template(s), plus 1 cell containing the 'New Workout' button."
            )
        }
    }

    /// Tests editing the name of a workout results in an instant change and the new name being correctly displayed
    /// on the Home tab.
    func testEditingWorkoutName() throws {
        try testHomeTabAddsSingleWorkout()

        app.tables.cells.buttons["New Workout"].tap()
        app.textFields["New Workout"].tap()
        app.keys["more"].tap()
        app.keys["space"].tap()
        app.keys["more"].tap()
        app.keys["2"].tap()
        app.buttons["Return"].tap()
        app.navigationBars.buttons["Home"].tap()

        XCTAssertTrue(
            app.tables.cells.buttons["New Workout 2"].exists,
            "The new workout name should be visible in the list of workouts."
        )
    }

    /// Tests editing the name of a template results in an instant change and the new name being correctly displayed
    /// on the Home tab.
    func testEditingTemplateName() throws {
        try testHomeTabAddsSingleTemplate()

        app.scrollViews.buttons["New Template"].forceTapElement()
        app.textFields["New Template"].tap()
        app.keys["more"].tap()
        app.keys["space"].tap()
        app.keys["more"].tap()
        app.keys["2"].tap()
        app.buttons["Return"].tap()
        app.navigationBars.buttons["Home"].tap()

        XCTAssertTrue(
            app.scrollViews.buttons["New Template 2"].exists,
            "The new template name should be visible in the list of templates."
        )
    }

    /// Tests editing the date of a workout results in an instant change and the new date being correct displayed on
    /// the Home tab.
    func testEditingWorkoutDate() throws {
        try testHomeTabAddsSingleWorkout()

        let tomorrow = Calendar.current.startOfDay(for: .now.addingTimeInterval(86400)).formatted(date: .complete,
                                                                                                  time: .omitted)
        let tomorrowText = app.tables.staticTexts[tomorrow]
        let tomorrowButton = app.sheets.scrollViews.otherElements.buttons["Tomorrow"]

        app.tables.cells.buttons["New Workout"].tap()
        app.tables.cells.buttons["Workout Date"].tap()
        tomorrowButton.tap()

        XCTAssertTrue(
            tomorrowText.waitForExistence(timeout: 1),
            "The section header should be tomorrow's date."
        )

        XCTAssertEqual(
            app.tables.cells.count,
            2,
            "There should be 1 workout, plus 1 cell containing the 'New Workout' button."
        )
    }

    /// Tests adding a single exercise results in that exercise being displayed in ExercisesView correctly and the
    /// 'Load exercise library' button disappearing.
    func testAddingAnExercise() throws {
        let exerciseCategories = ["Free Weights", "Bodyweight"]

        try testExercisesTabSetUp()

        app.navigationBars.buttons["Add new exercise"].tap()

        app.textFields["Exercise Name"].tap()

        XCTAssertTrue(
            app.keys["B"].waitForExistence(timeout: 1),
            "The keyboard must be visible on screen before being used."
        )

        app.keys["B"].tap()
        app.keys["e"].tap()
        app.keys["n"].tap()
        app.keys["c"].tap()
        app.keys["h"].tap()
        app.buttons["Return"].tap()
        app.buttons["Save"].tap()

        XCTAssertTrue(
            app.navigationBars.staticTexts["Exercises"].waitForExistence(timeout: 1),
            "The navigation bar title should be 'Exercises'."
        )

        XCTAssertEqual(
            app.tables.cells.count,
            1,
            "There should be 1 exercise in the list."
        )

        XCTAssertTrue(
            app.tables.cells.buttons["Bench"].exists,
            "The exercise that the user created should be available as a button in the list."
        )

        app.tables.cells.buttons["Bench"].tap()

        XCTAssertTrue(
            !app.tables.otherElements.staticTexts["Exercise History"].exists,
            "An exercise history should not yet exist for this exercise since no sets have been completed."
        )

        app.navigationBars.buttons["Exercises"].tap()

        XCTAssertEqual(
            app.segmentedControls.count,
            1,
            "When there is >= 1 exercises, the exercise category segmented control should be visible."
        )

        for category in exerciseCategories {
            app.segmentedControls.buttons[category].tap()

            XCTAssertTrue(
                !app.buttons["Load exercise library"].exists,
                "When there is >= 1 exercise(s) in any category, 'Load exercise library' button should not be visible."
            )
        }
    }

    /// Tests loading the exercise library results in the correct number of exercises being added to each category.
    func testLoadingExerciseLibrary() throws {
        // Also consider testing whether the muscle groups displayed are correct.
        let exerciseCategories = ["Free Weights", "Bodyweight"]

        try testExercisesTabSetUp()

        app.buttons["Load exercise library"].tap()

        XCTAssertEqual(
            app.segmentedControls.count,
            1,
            "When there is >= 1 exercises, the exercise category segmented control should be visible."
        )

        for category in exerciseCategories {
            app.segmentedControls.buttons[category].tap()

            XCTAssertTrue(
                !app.buttons["Load exercise library"].exists,
                "When there is >= 1 exercise(s) in any category, 'Load exercise library' button should not be visible."
            )

            if category == "Free Weights" {
                XCTAssertEqual(
                    app.tables.cells.count,
                    21,
                    "There should be 21 exercises in the list for the \(category) exercise category."
                )
            } else if category == "Bodyweight" {
                XCTAssertEqual(
                    app.tables.cells.count,
                    13,
                    "There should be 13 exercises in the list for the \(category) exercise category."
                )
            } else if category == "Cardio" {
                XCTAssertEqual(
                    app.tables.cells.count,
                    4,
                    "There should be 5 exercises in the list for the \(category) exercise category."
                )
            } else if category == "Class" {
                XCTAssertEqual(
                    app.tables.cells.count,
                    5,
                    "There should be 5 exercises in the list for the \(category) exercise category."
                )
            } else {
                XCTAssertEqual(
                    app.tables.cells.count,
                    9,
                    "There should be 13 exercises in the list for the \(category) exercise category."
                )
            }
        }
    }

    /// Tests adding an exercise results in the correct UI being displayed for both EditWorkoutView and on the Home tab.
    func testAddingExerciseToWorkout() throws {
        try testHomeTabAddsSingleWorkout()
        try testAddingAnExercise()

        app.tabBars.buttons["Home"].tap()
        app.tables.cells.buttons["New Workout"].tap()
        app.tables.cells.buttons["Add Exercise"].tap()
        app.tables.cells.otherElements["Bench"].tap()
        app.navigationBars.buttons["Add"].tap()

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["Bench"].exists,
            "A single cell with static text matching the added exercise's name should exist."
        )

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["Free Weights"].exists,
            "A single cell with static text matching the added exercise's category should exist."
        )

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["No sets"].exists,
            "A single cell with static text stating there are currently no sets for the exercise should exist."
        )

        XCTAssertTrue(
            !app.tables.otherElements.staticTexts["Completed"].exists,
            "Since there should be no sets for the exercise, there should be no mention of sets being completed."
        )

        XCTAssertEqual(
            app.tables.otherElements.progressIndicators.firstMatch.value as? String,
            "0%",
            "With no sets for the exercise none can be completed and the progress bar value should be 0%."
        )

        app.navigationBars.buttons["Home"].tap()

        XCTAssertEqual(
            app.tables.cells.count,
            2,
            "There should still only be 1 workout, plus the 'New Workout' button in the list."
        )

        XCTAssertTrue(
            app.tables.cells.staticTexts["1 exercise"].exists,
            "There should be 1 workout in the list with caption text reading '1 exercise'."
        )

        XCTAssertTrue(
            app.tables.cells.staticTexts["No sets"].exists,
            "There should be 1 workout in the list with caption text reading 'No sets'."
        )
    }

    /// Tests adding an exercise results in the correct UI being displayed for both EditWorkoutView and on the Home tab.
    func testAddingExerciseToTemplate() throws {
        try testHomeTabAddsSingleTemplate()
        try testAddingAnExercise()

        app.tabBars.buttons["Home"].tap()
        app.buttons["New Template"].tap()
        app.tables.cells.buttons["Add Exercise"].tap()
        app.tables.cells.otherElements["Bench"].tap()
        app.navigationBars.buttons["Add"].tap()

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["Bench"].exists,
            "A single cell with static text matching the added exercise's name should exist."
        )

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["Free Weights"].exists,
            "A single cell with static text matching the added exercise's category should exist."
        )

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["No sets"].exists,
            "A single cell with static text stating there are currently no sets for the exercise should exist."
        )

        XCTAssertTrue(
            !app.tables.otherElements.staticTexts["Completed"].exists,
            "Since there should be no sets for the exercise, there should be no mention of sets being completed."
        )

        XCTAssertTrue(
            !app.tables.otherElements.progressIndicators.firstMatch.exists,
            "There should be no progress bar for exercises in a template."
        )

        app.navigationBars.buttons["Home"].tap()

        XCTAssertEqual(
            app.scrollViews.buttons.count,
            2,
            "There should still only be 1 template, plus the 'New Template' button in the scroll view."
        )

        XCTAssertTrue(
            app.staticTexts["1 exercise"].exists,
            "There should be 1 template in the scroll view with caption text reading '1 exercise'."
        )

        XCTAssertTrue(
            app.staticTexts["No sets"].exists,
            "There should be 1 template in the scroll view with caption text reading 'No sets'."
        )
    }

    /// Tests adding an exercise set to an exercise in a workout results in the correct UI being displayed for
    /// ExerciseSheetView, EditWorkoutView and EditExerciseView.
    // swiftlint:disable:next function_body_length
    func testAddingSetToExerciseInWorkout() throws {
        try testAddingExerciseToWorkout()

        app.tables.cells.buttons["New Workout"].tap()
        app.tables.cells["Bench, progress: 0%"].tap()

        XCTAssertTrue(
            !app.tables.cells["Set 1: 0 kilograms, 10 reps. Swipe right to complete, left to delete."].exists,
            "There should be 0 sets initially."
        )

        XCTAssertTrue(
            app.tables.buttons["Add Set to Exercise: Bench"].exists,
            "There should be 0 sets initially, plus the 'Add Set' button."
        )

        app.tables.buttons["Add Set to Exercise: Bench"].tap()

        XCTAssertEqual(
            app.tables.cells.firstMatch.otherElements.firstMatch.otherElements.count,
            2,
            "There should be 1 set, plus the 'Add Set'."
        )

        XCTAssertEqual(
            app.tables.cells.textFields["Weight"].value as? Double,
            nil,
            "The new set's weight should be nil."
        )

        XCTAssertEqual(
            app.tables.cells.textFields["Reps"].value as? Int,
            nil,
            "The new set's rep count should be nil."
        )

        app.navigationBars["Bench"].buttons["Save"].tap()

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["1 set, 0 completed"].exists,
            "A single cell with static text stating there is currently 1 incomplete set for the exercise should exist."
        )

        XCTAssertEqual(
            app.tables.otherElements.progressIndicators.firstMatch.value as? String,
            "0%",
            "The single exercise is incomplete and the progress bar value should therefore be 0%."
        )

        app.navigationBars.buttons["Home"].tap()

        XCTAssertEqual(
            app.tables.cells.count,
            2,
            "There should still only be 1 workout, plus the 'New Workout' button in the list."
        )

        XCTAssertTrue(
            app.tables.cells.staticTexts["1 exercise"].exists,
            "There should be 1 workout in the list with caption text reading '1 exercise'."
        )

        XCTAssertTrue(
            app.tables.cells.staticTexts["1 set"].exists,
            "There should be 1 workout in the list with caption text reading '1 set'."
        )

        app.tabBars.buttons["Exercises"].tap()
        app.segmentedControls.buttons["Free Weights"].tap()
        app.tables.cells.buttons["Bench"].tap()

        XCTAssertTrue(
            !app.tables.otherElements.staticTexts["Exercise History"].exists,
            "An exercise history should not yet exist for this exercise since no sets have been completed."
        )

        app.navigationBars.buttons["Exercises"].tap()
    }

    /// Tests adding an exercise set to an exercise in a template results in the correct UI being displayed for
    /// ExerciseSheetView, EditWorkoutView and EditExerciseView.
    // swiftlint:disable:next function_body_length
    func testAddingSetToExerciseInTemplate() throws {
        try testAddingExerciseToTemplate()

        app.scrollViews.buttons["New Template"].tap()

        app.tables.cells["Bench, progress: 0%"].tap()

        XCTAssertTrue(
            !app.tables.cells["Set 1: 0 kilograms, 10 reps. Swipe right to complete, left to delete."].exists,
            "There should be 0 sets initially."
        )

        XCTAssertTrue(
            app.tables.buttons["Add Set to Exercise: Bench"].exists,
            "There should be 0 sets initially, plus the 'Add Set' button."
        )

        app.tables.buttons["Add Set to Exercise: Bench"].tap()

        XCTAssertEqual(
            app.tables.cells.firstMatch.otherElements.firstMatch.otherElements.count,
            2,
            "There should be 1 set, plus the 'Add Set'."
        )

        XCTAssertEqual(
            app.tables.cells.textFields["Weight"].value as? Double,
            nil,
            "The new set's weight should be nil."
        )

        XCTAssertEqual(
            app.tables.cells.textFields["Reps"].value as? Int,
            nil,
            "The new set's rep count should be nil."
        )

        app.navigationBars["Bench"].buttons["Save"].tap()

        XCTAssertTrue(
            app.tables.otherElements.staticTexts["1 set"].exists,
            "A single cell with static text stating there is currently 1 set for the exercise should exist."
        )

        app.navigationBars.buttons["Home"].tap()

        XCTAssertEqual(
            app.scrollViews.buttons.count,
            2,
            "There should still only be 1 template, plus the 'New Template' button in the scroll view."
        )

        XCTAssertTrue(
            app.staticTexts["1 exercise"].exists,
            "There should be 1 template in the scroll view with caption text reading '1 exercise'."
        )

        XCTAssertTrue(
            app.staticTexts["1 set"].exists,
            "There should be 1 template in the scroll view with caption text reading 'No sets'."
        )

        app.tabBars.buttons["Exercises"].tap()
        app.segmentedControls.buttons["Free Weights"].tap()
        app.tables.cells.buttons["Bench"].tap()

        XCTAssertTrue(
            !app.tables.otherElements.staticTexts["Exercise History"].exists,
            "An exercise history should not yet exist for this exercise since no sets have been completed."
        )

